# simplified_biped

./: .gitignore  Dockerfile  Dockerfile.ubuntu  Dockerfile.ubuntu-base-image  Dockerfile.ubuntu-plugin  README.md  both_legs_actuators_modelled_hanging.sdf  both_legs_actuators_modelled_not_hanging.sdf  both_legs_actuators_modelled_not_hanging_knee_actuator_removed.sdf  both_legs_simplified_high_mass.sdf  both_legs_simplified_low_mass.sdf  both_legs_simplified_medium_mass.sdf  both_legs_simplified_medium_mass_not_hanging.sdf  both_legs_simplified_medium_mass_not_hanging.sdf.accurate_inertia  build_plugins  model.config  model.sdf  model_floating_torso.sdf  model_not_hanging.sdf  model_test.sdf  old_model.sdf  run_sim  run_sim.py  simplified_biped-workspace.code-workspace  simplified_biped.world  simplified_biped.world.save
control_plugin/: CMakeLists.txt  FootContactPlugin.cc  FootContactPlugin.hh  FootForcePlugin.cc  FootForcePlugin.hh  biped_plugin.cc  mpc_log.csv  world_state_plugin.cc
meshes/: actuator_scaled.stl  hip2-hip1-scaled.stl  hip2-hip1-v2-scaled.stl  hip3-hip2-connection-piece-scaled-v2.stl  hip3-hip2-connection-piece-scaled.stl  lower-leg-scaled.stl  torso-scaled.stl  torso_connection.stl  upper-leg-scaled.stl  upper_leg.stl  upper_leg_350mm.stl
